@@ -175,3 +175,43 @@ You need to modify 2 config files for HDFS
   > AN <command> #execute a given command in all nodes including master
   > DN <command> #execute a given command in all nodes excluding master
  ```
+
+## 9. Spark Installation.
+
+### a. Download Binary
+
+```
+http://spark.apache.org/downloads.html
+wget http://d3kbcqa49mib13.cloudfront.net/spark-2.0.1-bin-hadoop2.7.tgz
+tar -zvf spark-2.0.1-bin-hadoop2.7.tgz
+```
+
+### b. Build it yourself
+
+```
+git clone https://github.com/apache/spark.git
+export MAVEN_OPTS="-Xmx32G -XX:MaxPermSize=8G -XX:ReservedCodeCacheSize=2G"
+mvn -T40 -Pyarn -Phadoop-2.7 -Dhadoop.version=2.7.1 -Phive -Phive-thriftserver -DskipTests -Dmaven.javadoc.skip=true install
+```
+
+### c. Test
+```
+export SPARK_HOME=$HOME/spark-2.0.1-bin #in .bashrc
+./bin/spark-submit --class org.apache.spark.examples.SparkPi     --master yarn-client --driver-memory 1024M --num-executors 2    --executor-memory 1g     --executor-cores 1     ./examples/jars/spark-examples_2.11-2.0.1.jar    10 
+```
+
+## 10. Spark command line options for Yarn Scheduler.
+
+
+| Option | Description |
+|--------|-------------|
+| --num-executors | Total number of executor JVMs to spawn across Yarn Cluster |
+| --executor-cores | Total number of cores in each executor JVM |
+| --executor-memory | Memory to be allocated for each JVM 1024M/1G|
+| --driver-memory | Memory to be allocated for driver JVM |
+| --driver-cores  | Total number of vcores for driver JVM |
+|   | Total vcores = num-executors * executor-vcores + driver-cores  |
+|   | Total Memory = num-executors * executor-memory + driver-memory |  
+|--driver-java-options | To pass driver JVM, useful in local mode for profiling |
+
+-----------------------------------------------------------------
